chore: update version to 1.0.0-SNAPSHOT and add tests for SSL context and validators